# ree-workshop-test

./: Cargo.toml  README.md  dfx.json
src/: memory.rs  state.rs
src/ree-workshop-backend/: Cargo.toml  ree-workshop-backend.did
src/ree-workshop-backend/src/: errors.rs  exchange.rs  lib.rs
