[package]
name = "ree-workshop-canister-backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["."]

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ree-types = { git = "https://github.com/octopus-network/ree-types.git", rev = "3d0fb503384082bdeaf368305c4229801ee9ebd3" }
ic-stable-structures = "0.6"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
ic-cdk-macros = "0.17"
thiserror = "1"
ic-canister-log = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
ic-canisters-http-types = { git = "https://github.com/dfinity/ic", tag = "release-2024-03-06_23-01+p2p" }
time = "0.3"
serde_json = "1.0"
serde_derive = "1.0"
hex = "0.4"
